overflow_x solved

--- a/src/styling/footer.css
+++ b/src/styling/footer.css
@@ -32,13 +32,13 @@
   line-height: 5px;
 }
 .footer-text h3 {
-  font-size: 2rem;
+  font-size: 1.7rem;
   line-height: 45px;
   margin: 0;
 }
 .footer-text a {
   margin: 0;
-  font-size: 20px;
+  font-size: 18px;
   color: #fff;
   font-weight: bold;
 }
