--- a/src/styling/testimonial.css
+++ b/src/styling/testimonial.css
@@ -1,9 +1,11 @@
 .testimonials {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  place-content: center;
+  place-items: center;
+  max-width: 100%;
   margin: 80px auto;
+  overflow-x: hidden;
 }
 .testimonials h1 {
   font-family: "Times New Roman", Times, serif;
